# CalcStats-TestDesign-Kata

./: .gitignore  README.md
c_catch2/: .gitignore  CMakeLists.txt  README.md
c_catch2/src/: calcstats1.h  calcstats2.h  calcstats3.c
c_catch2/test-catch2/: CMakeLists.txt  calcstats_catch2_1.cpp  calcstats_catch2_2.cpp  calcstats_catch2_3.cpp
c_gtest/: CMakeLists.txt  README.md
c_gtest/src/: CMakeLists.txt  calcstats.c  calcstats1.c  calcstats1.h  calcstats2.c  calcstats3.c  calcstats3.h
c_gtest/test-gtest/: CMakeLists.txt  calcstats_gtest1.cpp  calcstats_gtest2.cpp  calcstats_gtest3.cpp  sample_gtest.cpp
c_texttest/: CMakeLists.txt  main.c
cpp/: CMakeLists.txt  README.md
cpp/src/: CMakeLists.txt  CalcStats1.cpp  CalcStats1.h  CalcStats2.cpp  CalcStats2.h  CalcStats3.cpp  CalcStats3.h
cpp/test-catch2/: CMakeLists.txt  sample_catch.cpp
cpp/test-doctest/: sample_doctest.cpp
cpp/test-gtest/: CMakeLists.txt  CalcStats1_gtest.cpp  CalcStats2_gtest.cpp  CalcStats3_gtest.cpp  sample_gtest.cpp
csharp/CalcStats/: .gitignore  CalcStats.sln
java/: .gitignore  pom.xml
kotlin/: README.md  settings.gradle.kts
php/: .gitignore  composer.json  phpunit.bat  phpunit.xml
php/src/: CalcStats1.php  CalcStats2.php  CalcStats3.php
php/test/: CalcStats1Test.php  CalcStats2Test.php  CalcStats3Test.php
python/: README.md  calc_stats2.py
python/src/: calc_stats1.py  calc_stats2.py  calc_stats3.py
python/tests/: test_calc_stats1.py  test_calc_stats2.py  test_calc_stats3.py
typescript/: .gitignore  package.json  stryker.config.json  tsconfig.json
(+30 files in other folders)
